--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <meta name="theme-color" content="#000000" />
-    <title>React App</title>
+    <title>Youtube Clone</title>
   </head>
   <body>
     <div id="root"></div>
